--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ _build/
 _static/
 _templates/
 */dask-worker-space/
-01_midi_drums/midi_df.parquet
-01_midi_drums/extracted_drums_df.parquet
+*.parquet
+Untitled*.ipynb
 
 
 # Byte-compiled / optimized / DLL files
@@ -154,7 +154,8 @@ cython_debug/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
