--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@ repos:
   rev: 0.3.9
   hooks:
     - id: nbstripout
-      args: [--keep-output]
+      args: [--keep-output, --extra-keys=metadata.language_info.version]
