--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-jupyterlab
-numpy
-pandas
-matplotlib
-note_seq
-pretty_midi
-sc-kernel
-notebook==6.*
-pre-commit
-python-osc
+jupyterlab==3.0.14
+numpy==1.20.3
+pandas==1.2.3
+matplotlib==3.4.1
+note_seq==0.0.3
+pretty_midi==0.2.9
+sc-kernel==0.3.2
+notebook==6.3.0
+pre-commit==2.12.1
+python-osc==1.7.6
